--- a/app.properties
+++ b/app.properties
@@ -3,7 +3,7 @@ application.name: Emby
 application.version: 4.7.9.0
 
 # Package Information
-package.name: Emby
+package.name: Emby Server
 package.description: Your personal media on any device. Bringing all of your home videos, music, and photos together into one place has never been easier. Your personal Emby Server automatically converts and streams your media on-the-fly to play on any device.
 package.homepage: https://emby.media/
 
