--- a/.github/workflows/fetchRelease.yml
+++ b/.github/workflows/fetchRelease.yml
@@ -25,18 +25,14 @@ jobs:
           echo $EXIT_CODE
            # Set environment variable
           echo "EXIT_CODE=$EXIT_CODE" >> $GITHUB_ENV
-      - name: Install SDKMAN + Groovy
+      - name: Install Groovy
         if: ${{ env.EXIT_CODE == 1 }}
-        run: |
-          curl -s "https://get.sdkman.io" | bash
-          source "$HOME/.sdkman/bin/sdkman-init.sh"
-          # Install a latest version of groovy
-          sdk install groovy
+        uses: WtfJoke/setup-groovy@v1
+        with: 
+          groovy-version: "4.0.9"
       - name: Regenerate repository.xml
         if: ${{ env.EXIT_CODE == 1 }}
-        run: | 
-          source "$HOME/.sdkman/bin/sdkman-init.sh"
-          groovy createRepository.groovy
+        run: groovy createRepository.groovy
       - name: Commit + push changes
         if: ${{ env.EXIT_CODE == 1 }}
         run: |
