--- a/.github/workflows/fetchRelease.yml
+++ b/.github/workflows/fetchRelease.yml
@@ -29,7 +29,7 @@ jobs:
         if: ${{ env.EXIT_CODE == 1 }}
         uses: WtfJoke/setup-groovy@v1
         with: 
-          groovy-version: "4.0.9"
+          groovy-version: "4.x"
       - name: Regenerate repository.xml
         if: ${{ env.EXIT_CODE == 1 }}
         run: groovy createRepository.groovy
